--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,5 +4,31 @@
 @tailwind utilities;
 
 [x-cloak] {
-    display: none;
+    display: none !important;
+}
+.content-with-diagonal-bg {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+}
+/* custom.css */
+.custom-hover {
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+.custom-hover::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.5);
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease;
+}
+
+.custom-hover:hover::after {
+    visibility: visible;
+    transform: scaleX(1);
 }
