--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -73,7 +73,7 @@
 body {
     background-color: var(--bg-light);
     color: var(--text-light);
-    font-family: "Figtree", sans-serif; /* Asegura que la fuente se aplique globalmente */
+    font-family: "Figtree", sans-serif;
 }
 
 [data-theme="dark"] body {
